6 семестр/Компиляторы/compilers-labs-backup/lab8-a/out/production/lab8-a/grammar
GRAMMAR ::= (COMMENT|RULE)* EOF
RULE    ::= NTERM LPAREN EXPR RPAREN
EXPR    ::= CONCAT COMMA EXPR | CONCAT
CONCAT  ::= QUANT CONCAT   | QUANT
QUANT   ::= LFPAREN EXPR RFPAREN | LSPARENT EXPR RSPAREN | LIT
LIT     ::= TERM | NTERM | LPAREN EXPR RPAREN
